fix for local storage and too long titles

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -12,6 +12,9 @@ body
   
   .brand-logo
     text-transform: uppercase
+    overflow: hidden
+    max-width: 75%
+    text-overflow: ellipsis
   
   nav
     background-color: $primary-color
